(library
 (name tsdl)
 (public_name tsdl)
 (modules Tsdl)
 (foreign_stubs
  (language c)
  (names tsdl_stubs)
  (flags (:include ../support/c_library_flags.sexp)))
 (c_library_flags
  -Wl,-no-as-needed
  (:include ../support/c_library_flags.sexp))
 (libraries tsdl_consts ctypes-foreign))

(install
 (section lib)
 (package tsdl)
 (files
  (tsdl_top_init.ml as top/tsdl_top_init.ml)))
