(executable
 (name consts)
 (modules Consts)
 (foreign_stubs
  (language c)
  (names consts_stub)
  (flags -I/usr/include/SDL2)))

(rule
 (target tsdl_consts.ml)
 (deps %{exe:consts.exe})
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))

(library
 (name tsdl_consts)
 (public_name tsdl.consts)
 (modules Tsdl_consts))
