(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))

(executable
 (name consts)
 (modules Consts)
 (foreign_stubs
  (language c)
  (names consts_stub)
  (flags
   (:include c_flags.sexp))))

(rule
 (target tsdl_consts.ml)
 (deps %{exe:consts.exe})
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))

(library
 (name tsdl_consts)
 (public_name tsdl.consts)
 (modules Tsdl_consts))
